# Respectabullz

./: .cursorrules  .env.example  .gitattributes  .gitignore  Audit_Results.md  CHANGELOG.md  CLAUDE.md  CONTRACT_UPDATE_SUMMARY.md  CONTRIBUTING.md  IMPROVEMENT.md  ISSUE_AUDIT.md  PROJECT_RULES.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  run-tauri-dev.ps1  start_dev.py  tailwind.config.js  tauri-dev.cmd  vite.config.ts  vitest.config.ts
contacts/: CONTRACT_TEMPLATE_GUIDE.md  Contract of Sale.docx  contract_template_respectabullz.json
contracts/: CONTRACT_TEMPLATE_GUIDE.md  Contract Template.docx  Contract of Sale.docx.backup  contract_template_respectabullz.json
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  HOWTO.md  SETUP.md  USER_MANUAL.md  VERSIONING.md
prisma/: schema.prisma
scripts/: bump-version.js  create-icon.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src/components/: ErrorBoundary.tsx  FirstLaunchDialog.tsx
src/hooks/: useBreederSettings.ts  useBugReport.ts  useClientInterests.ts  useClients.ts  useCommunicationLogs.ts  useContacts.ts  useContract.ts  useDashboard.ts  useDocumentTags.ts  useDocuments.ts  useDogs.ts  useExpenseCategories.ts  useExpenses.ts  useExternalStuds.ts  useGeneticTests.ts  useHealth.ts  useHeatCycles.ts  useHeatEvents.ts  useLitterPhotos.ts  useLitters.ts  useSettings.ts  (+4 more)
tools/: dump_contract.py  update_contract_template.py
(+149 files in other folders)
